refuel_opt.ipynb

--- a/Papers/refuel_opt.ipynb
+++ b/Papers/refuel_opt.ipynb
@@ -24,7 +24,7 @@
     }
    ],
    "source": [
-    "price=[4.84,5.05,5.17,4.92,4.87,4.92,4.98,4.88,5.20,5.36] #I190,I-290,I-294,I-355,I-55,I-57,I-80,I-88,I-90,I-94 (in this order, highway)\n",
+    "price=[4.84,5.05,5.17,4.92,4.87,4.92,4.98,4.88,5.20,5.36] #I190,I-290,I-294,I-355,I-55,I-57,I-80,I-88,I-90,I-94 (in this order, Chicago highway)\n",
     "Out=[0,3,1,5,3,50,100,75,70,75]#assumed randomly\n",
     "n=10 #number of gas stations\n",
     "Fuel={}\n",
