added image for pricing estimate

--- a/refuel_opt.ipynb
+++ b/refuel_opt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
@@ -33,7 +33,7 @@
     "#Outi = amount of miles that a vehicle must go outof-\n",
     "#route (OOR) to reach truck stop i\n",
     "#Milei = distance (miles) from truck stop i−1 to i (not\n",
-    "#including Outi−1 or Outi )\n",
+    "#including Outi−1 or Outi)\n",
     "SF=190\n",
     "MG= 18 #The average and median fuel economy for full-size pickup trucks are 19.1 and 18 miles per gallon\n",
     "TC=200\n",
@@ -62,17 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2023-08-25\n"
-     ]
-    }
-   ],
+   "execution_count": 27,
+   "outputs": [],
    "source": [
     "model=Model(\"refuel_station\")"
    ],
@@ -82,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "phi,delta={},{}\n",
@@ -98,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "if i==0:\n",
@@ -115,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "for i in range(n):\n",
@@ -127,13 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "outputs": [
     {
      "data": {
       "text/plain": "<gurobi.Constr *Awaiting Model Update*>"
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "for i in range(n):\n",
@@ -159,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "for i in range(n):\n",
@@ -171,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "for i in range(n):\n",
@@ -183,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "obj=quicksum(price[i]*phi[i]for i in range(n))\n",
@@ -195,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gurobi Optimizer version 9.5.2 build v9.5.2rc0 (win64)\n",
-      "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
+      "Gurobi Optimizer version 9.5.2 build v9.5.2rc0 (mac64[rosetta2])\n",
+      "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
       "Optimize a model with 41 rows, 20 columns and 247 nonzeros\n",
       "Model fingerprint: 0x044b5b8c\n",
       "Variable types: 0 continuous, 20 integer (10 binary)\n",
@@ -216,7 +207,7 @@
       "Presolve time: 0.00s\n",
       "Presolve: All rows and columns removed\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.01 seconds (0.00 work units)\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.00 seconds (0.00 work units)\n",
       "Thread count was 1 (of 8 available processors)\n",
       "\n",
       "Solution count 2: 244 260 \n",
@@ -227,17 +218,9 @@
     }
    ],
    "source": [
+    "model.update()\n",
     "model.optimize()"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
